--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Search services for kartverket based on Vue.js",
   "author": "Carsten Mielke <carsten.mielke@kartverket.no>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carsmie/oktopus.git"
+  },
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
